# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/python-template/: hello.py
