[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python-template"]

[project]
name = "python-template"
version = "0.0.1"
authors = [
  { name="Felipe Moreno", email="felipe@flpm.dev" },
]
description = "A python template package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ # For a list of valid classifiers, see https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/flpm/python-template"
Issues = "https://github.com/flpm/python-template/issues"